Devise and Letter Opener - Users

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,16 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<div class="welcome">
+    <h1>Connect with friends and the world around you on Fakebook.</h1><br>
+    <div class="sellpoint" id="feedAd">
+        <div class="icon"></div>
+        <strong>See photos and updates</strong> from friends in News Feed.
+    </div><br>
+    <div class="sellpoint" id="timeLineAd">
+        <div class="icon"></div>
+        <strong>Share what's new</strong> in your life on your Timeline.
+    </div><br>
+    <div class="sellpoint" id="searchAd">
+        <div class="icon"></div>
+        <strong>Find more</strong> of what you're looking for with Fakebook Search.
+    </div>
+</div>
+
