--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <% if @user.profile %>
 <div class="rightSide">
     <%#= render 'friendships/list' %>
-    <%# if @user == current_user%><%#= render 'posts/newpost' %><%#end%>
-    <%#= render 'posts/index' %>
+    <% if @user == current_user%><%= render 'posts/newpost' %><%end%>
+    <%= render 'posts/index' %>
 </div>
 <% end %>
