--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -11,6 +11,22 @@
     <div class="postAuthor"><%= post.getpostauthor %></div>
     <div class="postTime">Posted <%= post.getposttime %></div>
     <div class="postBody"><%= post.body %></div>
-   
+   <div class="commentsSection">
+    <% post.comments.each do |comment| %>
+        <div class='comment'>
+            <%= comment.getCommentAuthor %>:
+            <%= comment.body %><br><br>
+            <div class="commentManipBtns left">
+                <% if comment.user_id == current_user.id %>
+                    <%= link_to 'Edit', edit_post_comment_path(post, comment)%> | 
+                    <%= link_to 'Delete', post_comment_path(post, comment),
+                        method: :delete,
+                        data: { confirm: 'Are you sure?' } %>
+                <% end %>
+            </div><br>
+        </div>
+    <% end %>
+    <%= render partial: 'comments/newcomment', locals: {post: post, user: @user} %>
+    </div>
           
 </div>
