--- a/app/views/posts/_newpost.html.erb
+++ b/app/views/posts/_newpost.html.erb
@@ -9,6 +9,9 @@
             <%= f.text_area :body, cols: 40, rows: 5 %>
         </p>
         <p>
+            <%= f.file_field :photo %>
+        </p>
+        <p>
             <%= f.submit %>
         </p>
     <% end %>
