--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -16,6 +16,9 @@
     <p>
         <%= f.text_area :body, cols: 40, rows: 5  %>
     </p>
+    <p>
+        <%= f.file_field :photo %>
+    </p>
       <%= f.submit%>
 <% end %>
 <%= link_to 'Back', users_path(current_user) %>
