--- a/app/views/profiles/_newProfile.html.erb
+++ b/app/views/profiles/_newProfile.html.erb
@@ -28,6 +28,9 @@
         <%= f.label :interests %><br>
         <%= f.text_field :interests %>
       </p>
-      
+      <p>
+        <%= f.label :photo %><br>
+        <%= f.file_field :photo %>
+      </p>
   <%= f.submit%>
   <% end%>
