--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,677 @@
  *= require_tree .
  *= require_self
  */
+ @media only screen and (min-width: 1325px) {
+
+    body {
+       font-family: Arial, Helvetica, sans-serif;
+       background-color: lightgray;
+    }
+ 
+    .header {
+       position: fixed;
+       top: 0;
+       height: 50px;
+       color: white;
+       background-color: rgb(27, 88, 180);
+       width: 100%;
+       margin-left: -8px;
+       z-index: 1;
+    }
+    #logo {
+       display: inline-block;
+       font-size: 30px;
+       margin: 5px;
+    }
+    #logo a {
+       text-decoration: none;
+       color: white;
+    }
+ 
+    nav ul {
+       display: inline-block;
+       padding-bottom: 1px;
+    }
+    nav ul a{
+       color: white;
+       text-decoration: none;
+       margin: 5px;
+ 
+    }
+    nav ul li {
+       display: inline-block;
+    }
+ 
+ 
+    .left {
+       float: left;
+    }
+    .right {
+       float: right;
+    }
+ 
+    .welcome {
+       display: inline-block;
+       width: 45%;
+    }
+    .welcome h1 {
+       font-size: 25px;
+       margin-top: 70px;
+    }
+    .welcome h2 {
+       font-size: 17px;
+       font-weight: normal;
+    }
+    .flash {
+       margin-top: 60px;
+       background-color: white;
+    }
+ 
+    .section {
+       background-color: white;
+       padding: 10px;
+       margin: 0px 0px 10px 0px;
+ 
+    }
+    .aside {
+       background-color: white;
+       padding: 10px;
+       width: 400px;
+       display: inline-block;
+       height: 100%;
+       margin-top: 52px;
+    }
+    .rightSide {
+       width: 66%;
+       margin-right: -450px;
+       position: absolute;
+       top: 60px;
+       left: 440px;
+       margin: auto;
+    }
+    .profile {
+       background-color: white;
+    }
+    #profilePicture {
+       height: 200px;
+       width: 200px;
+    }
+    #profileName {
+       font-size: 20px;
+    }
+    .profile .button {
+       margin-top: 15px;
+    }
+    .margin {
+       margin-top: 50px;
+    }
+    .friendsList {
+       height: 250px;
+    }
+ 
+    .friendThumbnail {
+       text-align: center;
+       width: 100px;
+       display: inline-block;
+    }
+    .friendThumbnail p {
+       text-decoration: none;
+       font-size: 16px;
+       font-weight: normal;
+       color: black;
+    }
+    .thumbnail {
+       height: 100px;
+       width: 75px;
+       margin: auto;
+       display: inline-block;
+    }
+ 
+    .post {
+       background-color: white;
+       padding: 10px;
+       margin: 10px 0px;
+    }
+    .postAvatar {
+       height: 40px;
+       width: 40px;
+       border-radius: 50%;
+       display: inline-block;
+ 
+    }
+    .postPicture {
+       margin: 0, auto;
+       padding: 10px;
+       text-align: center;
+    }
+    .postBody {
+       padding: 15px 0px;
+       border-bottom: 1px solid lightslategray;
+       width: max-content;
+       margin: auto;
+       text-align: center;
+    }
+    .postAuthor {
+       font-weight: bold;
+       vertical-align: middle;
+       margin: 0px 5px 20px 5px;
+       display: inline-block;
+    }
+    .postTime {
+       font-size: 13px;
+    }
+    .post a {
+       color: black;
+       text-decoration: none;
+       font-size: 14px;
+    }
+    .dot {
+       height: 40px;
+       width: 40px;
+       border-radius: 50%;
+       display: inline-block;
+    }
+ 
+    .commentsSection {
+       width: 40%;
+       margin: 20px;
+       font-size: 13px;
+       display: inline-block;
+    }
+    .comment {
+       border-bottom: 1px solid lightslategray;
+       width: max-content;
+       padding-bottom: 3px;
+       margin: 5px;
+    }
+    .comment a {
+       font-size: 11px;
+    }
+    .newComment input {
+       width: 50%;
+    }
+    .newComment a {
+       width: 50%;
+    }
+ 
+    .likesSection {
+       text-align: right;
+    }
+    .likesCount {
+       display: inline-block;
+    }
+    .likesSection button {
+       display: inline-block;
+    }
+ 
+    .userThumbnail {
+       display: inline-block;
+       margin: 0px 5px;
+    }
+ 
+    .friendThumbnailNotes {
+       height: 200px;
+       width: 185px;
+       text-align: center;
+       display: inline-block;
+    }
+ 
+    .friendThumbnailNotes p {
+       text-decoration: none;
+       font-size: 16px;
+       font-weight: normal;
+       color: black;
+    }
+    .thumbnailNotes {
+       height: 100px;
+       width: 75px;
+       margin: auto;
+       display: inline-block;
+    }
+ }
+ 
+ @media only screen and (max-width: 1324px) and (min-width: 646px) {
+ 
+    body {
+       font-family: Arial, Helvetica, sans-serif;
+       background-color: lightgray;
+    }
+    
+    .header {
+       position: fixed;
+       top: 0;
+       height: 50px;
+       color: white;
+       background-color: rgb(27, 88, 180);
+       width: 100%;
+       margin-left: -8px;
+       z-index: 1;
+    }
+    #logo {
+       display: inline-block;
+       font-size: 30px;
+       margin: 5px;
+    }
+    #logo a {
+       text-decoration: none;
+       color: white;
+    }
+    
+    nav ul {
+       display: inline-block;
+       padding-bottom: 1px;
+    }
+    nav ul a {
+       color: white;
+       text-decoration: none;
+       margin: 10px;
+    
+    }
+    nav ul li {
+       display: inline-block;
+    }
+    
+    
+    .left {
+       float: left;
+    }
+    .right {
+       float: right;
+    }
+    
+    .welcome {
+       display: inline-block;
+       width: 45%;
+    }
+    .welcome h1 {
+       font-size: 25px;
+       margin-top: 70px;
+    }
+    .welcome h2 {
+       font-size: 17px;
+       font-weight: normal;
+    }
+    .flash {
+       margin-top: 60px;
+       background-color: white;
+    }
+    
+    .section {
+       background-color: white;
+       padding: 10px;
+       margin: 0px 0px 10px 0px;
+    
+    }
+    .aside {
+       background-color: white;
+       padding: 10px;
+       height: 100%;
+       margin-top: 52px;
+       margin-bottom: 10px;
+    }
+    .profile {
+       background-color: white;
+    }
+    #profilePicture {
+       height: 200px;
+       width: 200px;
+    }
+    #profileName {
+       font-size: 20px;
+    }
+    .profile .button {
+       margin-top: 15px;
+    }
+    .margin {
+       margin-top: 50px;
+    }
+    .friendsList {
+       height: 250px;
+    }
+    
+    .friendThumbnail {
+       text-align: center;
+       width: 100px;
+       display: inline-block;
+    }
+    .friendThumbnail p {
+       text-decoration: none;
+       font-size: 16px;
+       font-weight: normal;
+       color: black;
+    }
+    .thumbnail {
+       height: 100px;
+       width: 75px;
+       margin: auto;
+       display: inline-block;
+    }
+    
+    .post {
+       background-color: white;
+       padding: 10px;
+       margin: 10px 0px;
+    }
+    .postAvatar {
+       height: 40px;
+       width: 40px;
+       border-radius: 50%;
+       display: inline-block;
+    
+    }
+    .postPicture {
+       margin: 0, auto;
+       padding: 10px;
+       text-align: center;
+    }
+    .postBody {
+       padding: 15px 0px;
+       border-bottom: 1px solid lightslategray;
+       width: max-content;
+       margin: auto;
+       text-align: center;
+    }
+    .postAuthor {
+       font-weight: bold;
+       vertical-align: middle;
+       margin: 0px 5px 20px 5px;
+       display: inline-block;
+    }
+    .postTime {
+       font-size: 13px;
+    }
+    .post a {
+       color: black;
+       text-decoration: none;
+       font-size: 14px;
+    }
+    .dot {
+       height: 40px;
+       width: 40px;
+       border-radius: 50%;
+       display: inline-block;
+    }
+    
+    .commentsSection {
+       width: 40%;
+       margin: 20px;
+       font-size: 13px;
+       display: inline-block;
+    }
+    .comment {
+       border-bottom: 1px solid lightslategray;
+       width: max-content;
+       padding-bottom: 3px;
+       margin: 5px;
+    }
+    .comment a {
+       font-size: 11px;
+    }
+    .newComment input {
+       width: 50%;
+    }
+    .newComment a {
+       width: 50%;
+    }
+    
+    .likesSection {
+       text-align: right;
+    }
+    .likesCount {
+       display: inline-block;
+    }
+    .likesSection button {
+       display: inline-block;
+    }
+    
+    .userThumbnail {
+       display: inline-block;
+       margin: 0px 5px;
+    }
+    
+    .friendThumbnailNotes {
+       height: 200px;
+       width: 185px;
+       text-align: center;
+       display: inline-block;
+    }
+    
+    .friendThumbnailNotes p {
+       text-decoration: none;
+       font-size: 16px;
+       font-weight: normal;
+       color: black;
+    }
+    .thumbnailNotes {
+       height: 100px;
+       width: 75px;
+       margin: auto;
+       display: inline-block;
+    }
+ }
+ 
+ @media only screen and (max-width: 650px) and (min-width: 150px) {
+ 
+    body {
+       font-family: Arial, Helvetica, sans-serif;
+       background-color: lightgray;
+       text-align: justify;
+    }
+ 
+    .header {
+       position: fixed;
+       top: 0;
+       height: 100px;
+       color: white;
+       background-color: rgb(27, 88, 180);
+       width: 100%;
+       margin-left: -8px;
+       z-index: 1;
+    }
+    #logo {
+       display: none;
+       font-size: 30px;
+       margin: 5px;
+    }
+ 
+    nav ul {
+       font-size: 1.3em;
+       display: inline-block;
+       padding-bottom: 1px;
+       width: 100%;
+       text-align: center;
+    }
+    nav ul a{
+       color: white;
+       text-decoration: none;
+       margin: 5px;
+ 
+    }
+    nav ul li {
+       padding: 5px;
+       display: inline-block;
+    }
+ 
+ 
+    .left {
+       float: left;
+    }
+    .right {
+       float: right;
+    }
+ 
+    .welcome {
+       display: inline-block;
+       width: 45%;
+    }
+    .welcome h1 {
+       font-size: 25px;
+       margin-top: 120px;
+    }
+    .welcome h2 {
+       font-size: 17px;
+       font-weight: normal;
+    }
+    .flash {
+       margin-top: 110px;
+       background-color: white;
+    }
+ 
+    .section {
+       background-color: white;
+       padding: 10px;
+       margin: 0px 0px 10px 0px;
+       text-align: center;
+ 
+    }
+    .aside {
+       text-align: center;
+       background-color: white;
+       padding: 10px;
+       height: 100%;
+       margin-top: 52px;
+       margin-bottom: 10px;
+    }
+    .profile {
+       background-color: white;
+    }
+    #profilePicture {
+       margin: auto;
+       text-align: center;
+       height: 200px;
+       width: 200px;
+    }
+    #profileName {
+       font-size: 20px;
+    }
+    .profile .button {
+       margin-top: 15px;
+    }
+    .margin {
+       margin-top: 100px;
+    }
+   
+ 
+    .friendThumbnail {
+       text-align: center;
+       width: 100px;
+       display: inline-block;
+    }
+    .friendThumbnail p {
+       text-decoration: none;
+       font-size: 16px;
+       font-weight: normal;
+       color: black;
+    }
+    .thumbnail {
+       height: 100px;
+       width: 75px;
+       margin: auto;
+       display: inline-block;
+    }
+ 
+    .post {
+       background-color: white;
+       padding: 10px;
+       margin: 10px 0px;
+       width: 100%;
+       margin-left: -10px;
+    }
+    .postAvatar {
+       height: 40px;
+       width: 40px;
+       border-radius: 50%;
+       display: inline-block;
+ 
+    }
+    .postPicture {
+       margin: 0, auto;
+       padding: 10px;
+       text-align: center;
+    }
+    .postBody {
+       padding: 15px 0px;
+       border-bottom: 1px solid lightslategray;
+       margin: auto;
+       text-align: center;
+    }
+    .postAuthor {
+       font-weight: bold;
+       vertical-align: middle;
+       margin: 0px 5px 20px 5px;
+       display: inline-block;
+    }
+    .postTime {
+       font-size: 13px;
+    }
+    .post a {
+       color: black;
+       text-decoration: none;
+       font-size: 14px;
+    }
+    .dot {
+       height: 40px;
+       width: 40px;
+       border-radius: 50%;
+       display: inline-block;
+    }
+ 
+    .commentsSection {
+       width: 100%;
+       margin: 20px;
+       font-size: 13px;
+       display: inline-block;
+    }
+    .comment {
+       border-bottom: 1px solid lightslategray;
+       width: max-content;
+       padding-bottom: 3px;
+       margin: 5px;
+    }
+    .comment a {
+       font-size: 11px;
+    }
+    .newComment input {
+       width: 50%;
+    }
+    .newComment a {
+       width: 50%;
+    }
+ 
+    .likesSection {
+       text-align: right;
+       padding: 10px;
+    }
+    .likesCount {
+       display: inline-block;
+    }
+    .likesSection button {
+       display: inline-block;
+    }
+ 
+    .userThumbnail {
+       text-align: center;
+       display: inline-block;
+       margin: 0px 5px;
+    }
+ 
+    .friendThumbnailNotes {
+       height: 200px;
+       width: 185px;
+       text-align: center;
+       display: inline-block;
+    }
+ 
+    .friendThumbnailNotes p {
+       text-decoration: none;
+       font-size: 16px;
+       font-weight: normal;
+       color: black;
+    }
+    .thumbnailNotes {
+       height: 100px;
+       width: 75px;
+       margin: auto;
+       display: inline-block;
+    }
+ }
